# P4_OCR

./: Notebook_1_analyse_exploratoire.ipynb  README.md  fct_projet_4.py  pyproject.toml
